<resources>
    <string name="app_name">Nitip!</string>
    <string name="login">Login</string>
    <string name="email_placeholder">Email</string>
    <string name="password_placeholder">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="login_google">Login with Google</string>
    <string name="new_to_titip">New to Nitip?</string>
    <string name="register">Register</string>
    <string name="username_placeholder">Username</string>
    <string name="confirm_password_placeholder">Confirm Password</string>
    <string name="have_account">Have Nitip Account?</string>
    <string name="dont_worry">Don\'t worry it happens. Please enter the email address associated with your account.</string>
    <string name="send_reset_password">Send Reset Password Email</string>
    <string name="email_confirmation">Email Confirmation</string>
    <string name="have_sent_email">We have sent a password reset email. Check your email inbox or spam to reset your password</string>
    <string name="didnt_get_email">Didn\'t get the email?</string>
    <string name="resend_email">Resend Email</string>
    <string name="back_login">Back to Login</string>
    <string name="transaction_count">Transaction\nCount</string>
    <string name="debt">Debt</string>
    <string name="receivable">Receivables</string>
    <string name="dashboard">Home</string>
    <string name="groups">Groups</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="hello">Hello, </string>
    <string name="all">All</string>
    <string name="debted">Debted</string>
    <string name="lended">Lended</string>
    <string name="welcome">Welcome, </string>
    <string name="login_failed">Login Failed</string>
    <string name="error">Error</string>
    <string name="field_must_filled">All field must be filled</string>
    <string name="invalid_credential">Invalid Credential</string>
    <string name="logout">Logout</string>
    <string name="change_profile">Change Profile Picture</string>
    <string name="change_password">Change Password</string>
    <string name="permission_needed">Permission needed</string>
    <string name="grant_external">You need to grant external storage permission to change profile picture</string>
    <string name="cancel">Cancel</string>
    <string name="profile_updated">Profile Update</string>
    <string name="profile_updated_desc">Your profile updated!</string>
    <string name="signed_out">Signed Out</string>
    <string name="check_email">Check your email. We have sent an OTP code</string>
    <string name="submit">Submit</string>
    <string name="otp">OTP</string>
    <string name="amount">Amount</string>
    <string name="ongoing_nitip">Ongoing Nitip</string>
    <string name="bill_debtors">Bill Debtors</string>
    <string name="bill">Bill</string>
    <string name="bill_detail">Bill Detail</string>
    <string name="change_status">Change Status</string>
    <string name="choose_file">Choose File</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="no_file">No file chosen</string>
    <string name="not_sent">Not Sent by Debtor</string>
    <string name="click_here_proof">Click here to open proof</string>
    <string name="no_app">No app available to open the image</string>
    <string name="date">Date : </string>
    <string name="lender">Lender : </string>
    <string name="debtor">Debtor : </string>
    <string name="create_group">Create Group</string>
    <string name="get_started_create_group">Get started by creating your own group and invite your friends to join.</string>
    <string name="group_name_placeholder">Group Name</string>
    <string name="group_code_placeholder">Group Code</string>
    <string name="random_code">Randomize Code</string>
    <string name="start_titip">Start Titip</string>
    <string name="titip_desc">Small acts can go a long way. Whether it\'s a smile, a listening ear, or a helping hand, your actions can make someone\'s day</string>
    <string name="titip_name">Titip Name</string>
    <string name="close_time">Close Time</string>
    <string name="come_on">Come on, don\'t be shy, what would you like to titip?</string>
    <string name="yummy">Yummy!</string>
    <string name="nitip">Nitip</string>
    <string name="edit_titip">Edit Titip</string>
    <string name="change_titip">Changed your mind? Edit while there\'s still time</string>
    <string name="update_titip">Update Titip</string>
    <string name="delete_titip">Delete Titip</string>
    <string name="join_group">Join Group</string>
    <string name="eating_by">Eating by yourself is lonely, join a group and enjoy meals with your friends!</string>
    <string name="join">Join</string>
    <string name="or2">Or,</string>
    <string name="create_a_group">Create a group</string>
    <string name="requesters">Requesters</string>
    <string name="you_already_titip">You already have a Titip</string>
    <string name="nitip_closed">Nitip Closed</string>
    <string name="closes_at">Closes At </string>
    <string name="open_until">Open Until </string>
    <string name="this_not_your_titip">This is not your Titip</string>
    <string name="bill_id">Bill ID: </string>
    <string name="amount2">Amount: </string>
    <string name="status">Status: </string>
    <string name="date2">Date: </string>
    <string name="send_proof">Send your proof!</string>
    <string name="password_conf_validation">Password and Confirm Password Must be Filled!</string>
    <string name="remember_password">Password updated! Remember your password :D</string>
    <string name="password_6_char">Password must be more than 6 characters</string>
    <string name="password_conf_not_match">Password and Confirm Password not match</string>
    <string name="otp_must_filled">OTP must be filled</string>
    <string name="group_code_must_filled">Group code must be filled</string>
    <string name="group_code_exist">Group code is exists</string>
    <string name="group_name_length">Group name length must be more than 5 characters</string>
    <string name="group_code_length">Group code length must be more than 5 characters</string>
    <string name="joined">You joined </string>
    <string name="new_titip_created">New titip created</string>
    <string name="date_in_future">Date must in the future</string>
    <string name="titip_detail_added">Titip Detail Added</string>
    <string name="fill_detail">Fill your detail</string>
    <string name="titip_deleted">Titip Deleted</string>
    <string name="email_must_filled">Email must be filled</string>
    <string name="invalid_email">Invalid email</string>
    <string name="email_doesnt_exist">Email does not exist</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="ongoing_nitip2">Nitip On Going: </string>
    <string name="register_success">Register Success!</string>
    <string name="username_5_char">Username must be more than 5 characters</string>
    <string name="password_alphanumeric">Password must be alphanumeric</string>
    <string name="email_exist">Email is exist</string>
    <string name="fill_bill">Fill the bill!</string>

    <string-array name="transaction_type_spinner_items">
        <item>Debt</item>
        <item>Receivables</item>
    </string-array>

</resources>