<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ForgotPasswordActivity"
    android:background="@color/colorOnPrimary">

    <LinearLayout
        android:id="@+id/llHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:id="@+id/btnBack"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:backgroundTint="@color/colorOnPrimary"
            android:text=""
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail"
            app:icon="@drawable/baseline_arrow_back_24"
            app:iconTint="@color/colorPrimary"
            android:minWidth="0dp"
            android:background="@null"
            android:layout_marginLeft="15dp"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/ivIllustration"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/forgot_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llHeader" />

    <TextView
        android:id="@+id/tvLForgotPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35sp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/forgot_password"
        android:textColor="@color/colorOnSecondary"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivIllustration" />

    <TextView
        android:id="@+id/tvForgotPasswordContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35sp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/dont_worry"
        android:textColor="@color/colorSecondaryVariant"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLForgotPasswordTitle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPasswordContent"
        android:orientation="vertical"
        android:layout_marginTop="50dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogIn"
            android:layout_marginTop="25dp"
            android:layout_marginHorizontal="35dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            app:boxBackgroundColor="@color/colorOnPrimary"
            app:boxStrokeColor="@color/colorPrimary"
            app:startIconDrawable="@drawable/baseline_alternate_email_24"
            android:hint="@string/email_placeholder"
            app:hintTextColor="@color/colorSecondaryVariant"
            android:layout_marginBottom="15dp"
            android:textColorHint="@color/colorSecondaryVariant"
            app:startIconTint="@color/colorPrimary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColor="@color/colorOnSecondary"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSendOtp"
            android:layout_width="match_parent"
            android:layout_height="55dp"
            android:layout_marginHorizontal="35dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/send_reset_password"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold"
            app:cornerRadius="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tilEmail" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>