<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.ChangePasswordActivity">

    <TextView
        android:id="@+id/tvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="35sp"
        android:paddingLeft="15dp"
        android:paddingTop="5dp"
        android:text="@string/change_password"
        android:textColor="@color/colorOnSecondary"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:hint="@string/password_placeholder"
        app:boxBackgroundColor="@color/colorOnPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorSecondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChangePassword"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        android:textColorHint="@color/colorSecondaryVariant"
        app:startIconTint="@color/colorPrimary"
        android:layout_marginTop="15px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorOnSecondary"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilConfirmPassword"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="35dp"
        android:hint="@string/confirm_password_placeholder"
        app:boxBackgroundColor="@color/colorOnPrimary"
        app:boxStrokeColor="@color/colorPrimary"
        app:hintTextColor="@color/colorSecondaryVariant"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilPassword"
        app:startIconDrawable="@drawable/baseline_alternate_email_24"
        android:textColorHint="@color/colorSecondaryVariant"
        app:startIconTint="@color/colorPrimary"
        android:layout_marginTop="15px">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/colorOnSecondary"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangePassword"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="35dp"
        android:backgroundTint="@color/colorPrimary"
        android:text="@string/change_password"
        android:textAllCaps="false"
        android:textSize="14sp"
        android:textStyle="bold"
        app:cornerRadius="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilConfirmPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>